...
                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                    <integer key="value" value="60"/>
                                </userDefinedRuntimeAttribute>
                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                            </userDefinedRuntimeAttributes>
                        </view>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My name is" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UGh-dd-89Z">
                            <rect key="frame" x="108.5" y="170" width="82.5" height="19.5"/>
                            <accessibility key="accessibilityConfiguration" identifier="Title Label"/>
                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                            <color key="textColor" systemColor="systemGrayColor"/>
                            <nil key="highlightedColor"/>
                        </label>
...
                                    <rect key="frame" x="0.0" y="0.0" width="60" height="80"/>
                                    <accessibility key="accessibilityConfiguration" identifier="Name Button"/>
                                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <state key="normal" image="person" catalog="system"/>
                                    <state key="selected" image="person.fill" catalog="system"/>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PVy-9H-MZK" userLabel="DOB Button">
                                    <rect key="frame" x="60" y="0.0" width="59.5" height="80"/>
                                    <accessibility key="accessibilityConfiguration" identifier="DOB Button"/>
                                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <state key="normal" image="calendar.circle" catalog="system"/>
                                    <state key="selected">
                                        <color key="titleColor" systemColor="systemGreenColor"/>
                                    </state>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ncy-Wx-aXM" userLabel="Address Button">
                                    <rect key="frame" x="119.5" y="0.0" width="60" height="80"/>
                                    <accessibility key="accessibilityConfiguration" identifier="Address Button"/>
                                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <state key="normal" image="location" catalog="system"/>
                                    <state key="selected" image="location.fill" catalog="system"/>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jju-OZ-8FV" userLabel="Phone Button">
                                    <rect key="frame" x="179.5" y="0.0" width="59.5" height="80"/>
                                    <accessibility key="accessibilityConfiguration" identifier="Phone Button"/>
                                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <state key="normal" image="phone" catalog="system"/>
                                    <state key="selected" image="phone.fill" catalog="system"/>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cio-bQ-ate" userLabel="Password Button">
                                    <rect key="frame" x="239" y="0.0" width="60" height="80"/>
                                    <accessibility key="accessibilityConfiguration" identifier="Password Button"/>
                                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <state key="normal" image="lock" catalog="system"/>
                                    <state key="selected" image="lock.fill" catalog="system"/>
                                </button>
...
