...
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a72-Nm-uHM" userLabel="CustomKolodaView" customClass="KolodaView" customModule="Koloda">
                                <rect key="frame" x="25" y="144" width="364" height="618"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nus-hV-n3t" userLabel="Reload Button">
                                <rect key="frame" x="10" y="40" width="50" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="Reload Button"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="C8K-6z-2PR"/>
                                    <constraint firstAttribute="height" constant="50" id="LuG-Id-sYK"/>
                                </constraints>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" image="goforward" catalog="system"/>
                                <state key="highlighted" image="goforward" catalog="system"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TWh-gm-VF4" userLabel="Heart Button">
                                <rect key="frame" x="354" y="40" width="50" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="Favorite Button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="6NN-ra-3Ri"/>
                                    <constraint firstAttribute="width" constant="50" id="Fxk-94-mQK"/>
                                </constraints>
                                <color key="tintColor" systemColor="systemRedColor"/>
                                <state key="normal" image="heart.fill" catalog="system"/>
...
                                </constraints>
                                <state key="normal" image="xmark.seal" catalog="system"/>
                                <connections>
                                    <action selector="tapCloseButton:" destination="8Fw-PI-t6f" eventType="touchUpInside" id="8oQ-sk-ro8"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorite Cards" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGr-OP-TSO">
                                <rect key="frame" x="19" y="5" width="385" height="29"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="180" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q4i-xe-Myf">
...
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VPx-qI-0pa" userLabel="Inside Rounded View">
                                                    <rect key="frame" x="10" y="33" width="114" height="114"/>
                                                    <subviews>
                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ATU-3O-Xda">
                                                            <rect key="frame" x="0.0" y="0.0" width="114" height="114"/>
                                                            <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Favorite Card ImageView"/>
                                                        </imageView>
                                                    </subviews>
                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                    <constraints>
                                                        <constraint firstItem="ATU-3O-Xda" firstAttribute="leading" secondItem="VPx-qI-0pa" secondAttribute="leading" id="0Aa-J0-yXf"/>
                                                        <constraint firstAttribute="height" constant="114" id="6kS-IM-FpC"/>
...
